syntax = "proto3";

package api;

option go_package = "github.com/psviderski/uncloud/internal/machine/api/pb";

import "google/protobuf/empty.proto";
import "internal/machine/api/pb/common.proto";
import "internal/machine/api/pb/machine.proto";

service Cluster {
  rpc AddMachine(AddMachineRequest) returns (AddMachineResponse);
  rpc ListMachines(google.protobuf.Empty) returns (ListMachinesResponse);
  rpc UpdateMachine(UpdateMachineRequest) returns (UpdateMachineResponse);
  rpc RemoveMachine(RemoveMachineRequest) returns (google.protobuf.Empty);

  rpc ReserveDomain(ReserveDomainRequest) returns (Domain);
  rpc GetDomain(google.protobuf.Empty) returns (Domain);
  rpc ReleaseDomain(google.protobuf.Empty) returns (Domain);
  rpc CreateDomainRecords(CreateDomainRecordsRequest) returns (CreateDomainRecordsResponse);

  // Deployment lock operations for preventing concurrent deployments.
  rpc AcquireDeploymentLock(AcquireDeploymentLockRequest) returns (AcquireDeploymentLockResponse);
  rpc ReleaseDeploymentLock(ReleaseDeploymentLockRequest) returns (google.protobuf.Empty);
  rpc RefreshDeploymentLock(RefreshDeploymentLockRequest) returns (google.protobuf.Empty);
  rpc GetDeploymentLock(GetDeploymentLockRequest) returns (DeploymentLock);
}

message AddMachineRequest {
  string name = 1;
  NetworkConfig network = 2;
  IP public_ip = 3;
}

message AddMachineResponse {
  MachineInfo machine = 1;
}

message MachineMember {
  MachineInfo machine = 1;

  enum MembershipState {
    UNKNOWN = 0;
    // The member is active.
    UP = 1;
    // The member is active, but at least one cluster member suspects its down. For all purposes,
    // a SUSPECT member is treated as if it were UP until either it refutes the suspicion (becoming UP)
    // or fails to do so (being declared DOWN).
    SUSPECT = 2;
    // The member is confirmed DOWN.
    DOWN = 3;
  }
  MembershipState state = 2;
}

message ListMachinesResponse {
  repeated MachineMember machines = 1;
}

message UpdateMachineRequest {
  // Machine to update
  string machine_id = 1;

  // Updated machine information
  optional string name = 2;
  optional IP public_ip = 3;
  repeated IPPort endpoints = 4;
}

message UpdateMachineResponse {
  MachineInfo machine = 1;
}

message RemoveMachineRequest {
  string id = 1;
}

message Domain {
  string name = 1;
}

message ReserveDomainRequest {
  string endpoint = 1;
}

message CreateDomainRecordsRequest {
  repeated DNSRecord records = 1;
}

message CreateDomainRecordsResponse {
  repeated DNSRecord records = 1;
}

message DNSRecord {
  string name = 1;

  enum RecordType {
    UNSPECIFIED = 0;
    A = 1;
    AAAA = 2;
  }
  RecordType type = 2;
  repeated string values = 3;
}

// Deployment lock messages for preventing concurrent deployments.
message DeploymentLock {
  // lock_key identifies the resource being locked (e.g., "service:<name>" or "project:<name>").
  string lock_key = 1;
  // deployment_id is a unique identifier for the deployment operation holding the lock.
  string deployment_id = 2;
  // owner identifies who holds the lock (e.g., machine ID or client identifier).
  string owner = 3;
  // acquired_at is when the lock was acquired (RFC3339 format).
  string acquired_at = 4;
  // expires_at is when the lock expires (RFC3339 format).
  string expires_at = 5;
}

message AcquireDeploymentLockRequest {
  // lock_key identifies the resource to lock.
  string lock_key = 1;
  // deployment_id is a unique identifier for this deployment operation.
  string deployment_id = 2;
  // owner identifies who is acquiring the lock.
  string owner = 3;
  // ttl_seconds is how long the lock should be held before it expires automatically.
  int64 ttl_seconds = 4;
}

message AcquireDeploymentLockResponse {
  // acquired indicates whether the lock was successfully acquired.
  bool acquired = 1;
  // lock contains the current lock state if acquired, or the existing lock if not acquired.
  DeploymentLock lock = 2;
}

message ReleaseDeploymentLockRequest {
  string lock_key = 1;
  string deployment_id = 2;
}

message RefreshDeploymentLockRequest {
  string lock_key = 1;
  string deployment_id = 2;
  int64 ttl_seconds = 3;
}

message GetDeploymentLockRequest {
  string lock_key = 1;
}
